--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">GradsHub</string>
+    <string name="password">PASSWORD</string>
+    <string name="login">LOGIN</string>
 </resources>
