--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,12 @@
     <string name="menu_slideshow">Slideshow</string>
 
     <string name="home_second">Home Second</string>
+
+    <string-array name="ACADEMIC_STATUS">
+        <item>Choose Category:</item>
+        <item>Honours</item>
+        <item>Masters</item>
+        <item>PhD</item>
+    </string-array>
+
 </resources>
