--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,25 +1,70 @@
 <resources>
     <string name="app_name">GradsHub</string>
-    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <!-- THE FOLLOWING BELONG TO THE AUTHENTICATION ACTIVITY -->
+    <!-- attributes for fragment_user_login -->
+    <string name="email_hint">email</string>
+    <string name="password_hint">password</string>
+    <string name="login_button">login</string>
+    <string name="forgot_password_button">forgot password?</string>
+    <string name="no_account_tv">no account? click below</string>
+    <string name="register_button">register</string>
 
-    <string name="home_second">Home Second</string>
-    <string name="spinnerErrorMsg">please select valid academic status</string>
+    <!-- attributes for fragment_user_register -->
+    <string name="firstName_hint">firstName</string>
+    <string name="lastName_hint">lastName</string>
+    <string name="register_email_hint">email</string>
+    <string name="phone_number_hint">phone number</string>
+    <string name="academic_status_tv">Academic Status:</string>
+    <string name="register_password_hint">password</string>
+    <string name="register_confirm_password_hint">re-enter password</string>
+    <string name="submit_button">submit</string>
 
     <string-array name="ACADEMIC_STATUS">
-        <item>Select your academic status:</item>
+        <item>Select your academic status here</item>
         <item>Honours</item>
         <item>Masters</item>
         <item>PhD</item>
     </string-array>
+    <!-- if the user does not select a valid academic status display this error message -->
+    <string name="spinnerErrorMsg">please select valid academic status</string>
+
+    <!-- attributes for fragment_reset_password-->
+    <string name="new_password_tv">Enter new password</string>
+    <string name="new_password_hint">password</string>
+    <string name="confirm_password_tv">confirm password</string>
+    <string name="confirm_password_hint">re-enter password</string>
+    <string name="reset_password_button">reset password</string>
+
+
+    <!-- THE FOLLOWING BELONG TO THE MAIN ACTIVITY -->
+    <string name="title_activity_main">MainActivity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <!-- these items appear on the navigation header -->
+    <string name="nav_header_title">GradsHub</string>
+    <string name="nav_header_subtitle">user\'s name here</string>
+    <string name="nav_header_desc">Navigation header</string>
+
+    <!-- for items on the overflow menu or on the action bar space if they're top priority items -->
+    <string name="action_settings">Settings</string>
+
+    <!-- attributes for fragment_my_groups -->
+    <string name="enter_group_name">Enter group name</string>
+    <string name="select_group_visibility">Select group visibility</string>
+    <string name="public_radio_button">public</string>
+    <string name="private_radio_button">private</string>
+    <string name="done_button">DONE</string>
+
+    <!-- for menu items on the navigation drawer -->
+    <string name="menu_home">Home</string>
+    <string name="menu_profile">Profile</string>
+    <string name="menu_myGroups">My Groups</string>
+    <string name="menu_createGroup">Create Group</string>
+
+   <!-- button that appears in the recycler view in my groups page -->
+    <string name="see_available_groups">see available groups</string>
 
 </resources>
