added functionality for viewing conference schedules

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,5 +82,7 @@
     <string name="subject">Subject</string>
     <string name="description">Description</string>
     <string name="post_hint">add link and/or attach a pdf file</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
